# SChat

./: CMakeLists.txt
.cache/clangd/index/: client.cc.CF2DDA95891EA92C.idx  main.cc.2D25B1AA3C6F84BC.idx  main.cc.6838C9B0A400AC03.idx  main.cc.CC90AC7A7451B454.idx  main.cc.F45FEE72F906717B.idx  server.cc.05EC45FA901CAA06.idx  server.h.CC4CE0A67CD10BD2.idx
buid/: CMakeCache.txt  Makefile  cmake_install.cmake
buid/client/: Makefile
buid/server/: Makefile
client/: CMakeLists.txt
client/src/: main.cc
server/: CMakeLists.txt
server/src/: main.cc
